# iris_production_project

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_dev  README.md  pip_freeze_dump.txt  pyproject.toml  pyproject_toml.txt  pyproject_toml_OLD.txt  requirements.txt
.github/: build_docker.yml
.github/workflows/: build_docker.yml
data/processed/: iris_processed.csv
notebooks/: iris_to_csv.ipynb  iris_training_XGBoost.ipynb  iris_training_logistic_regression.ipynb
src/: debug_gcs.py  log_metrics.py  make_dataset.py  preprocess.py  preprocess_funcs.py  test_gcs.py  train_evaluate.py
src/iris_production_project/: config.py  debug_gcs.py  log_metrics.py  make_dataset.py  preprocess_funcs.py  train_evaluate.py
src/iris_production_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/iris_production_project/models/: logistic_regression_model.py  xgboost_model.py
src/iris_production_project/tuning/: build_model.py  extract_best_params.py  parse_args.py  submit_hpt_job.py  train_tune.py
src/models/: logistic_regression_model.py  xgboost_model.py
tests/: test_config.py  test_log_metrics.py  test_models.py  test_preprocess_funcs.py  test_train_evaluate.py
