[project]
name = "iris_production_project"
version = "0.1.0"
description = "Production-style ML pipeline"
requires-python = ">=3.11"

[tool.ruff] 
line-length = 100 
target-version = "py311" 
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]