#tells pip how to build/install your project
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "iris_production_project"
version = "0.1.0"
description = "Production-style ML pipeline"
requires-python = ">=3.11"

# declare your runtime dependencies here
dependencies = [
    "gcsfs",
    "joblib",
    "numpy",
    "pandas",
    "scikit-learn",
    "xgboost",
    "cloudml-hypertune",
]

# tells setuptools your package code lives under src/
[tool.setuptools]
package-dir = {"" = "src"}

# tells setuptools to find packages inside src/
[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 150
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]